# MotionPlanning

./: .gitignore  CMakeLists.txt  Makefile  README.md  generate_python_proto.sh  requirements.txt
proto/: __init__.py  motion_planner.proto
src/: fk_solver.hpp  ik_solver.hpp  jacobian.hpp  main.cpp  motion_planner_server.cpp  movej_optimizer.hpp  movel_optimizer.hpp  robot.hpp  trajectory_optimizer.hpp  trajectory_utils.hpp  transform.hpp  urdf_parser.hpp
src/assets/ur5e/: ur5e.urdf
tests/: test.cpp  test_client.py
